--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yuehan Portfolio</title>
+    <title>Jasten Cabrera</title>
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -402,26 +402,30 @@
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>John Richard Alix</h1>
-        <p class="description">I am an innovator, and build projects for fun♥</p>
+        <h1>LeBron Raymone James Sr.</h1>
+        <p class="description"> I am an American professional basketball player for the Los Angeles Lakers of the National Basketball Association (NBA).</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
-            <h3>DEVCON Affiliations:</h3>
+            <h3>About me "King James"</h3>
             <ul>
-                <li>DEVCON Cagayan de Oro Vice President - 2025</li>
-                <li>DEVCON Code Camps Core Team - 2025</li>
-                <li>Former DEVCON Vice President for Student Engagement - 2024</li>
-                <li>Former Campus DEVCON Ambassador - 2024</li>
+                <li>I was born and raised in Akron, Ohio, and gained national attention while playing at St. Vincent–St. Mary High School. </li>
+                <li>People were already talking about me as a future NBA superstar because of my all-around scoring, passing, athleticism, and playmaking abilities.</li>
+                <li>After high school, I went straight to the pros, being selected by the Cleveland Cavaliers with the first overall pick in the 2003 NBA draft.</li>
+                <li>I won Rookie of the Year and quickly made a name for myself as one of the league’s top players.</li>
+                <li>I led Cleveland to its first NBA Finals appearance in 2007 and took home the scoring title in 2008.</li>
+                <li>After winning back-to-back MVPs in 2009 and 2010, I made the decision to leave the Cavaliers and join the Miami Heat as a free agent, </li>
+                <li>which turned into a controversial move that I announced during a nationally televised special called The Decision.</li>
             </ul>
 
-            <h3>Google Developers Affiliations:</h3>
+            <h3>Achievements</h3>
             <ul>
-                <li>Technical Core Team Member - 2025</li>
-                <li>Former Documentations Core Team Member - 2024</li>
-                <li>GDSC USTP IT Ambassador - 2022</li>
-                <li>GDSC USTP Mobile Development Lead - '2023-2024'</li>
+                <li>NBA's all-time leading scorer</li>
+                <li>Won four NBA championships from 10 NBA Finals appearances</li>
+                <li>Made eight consecutive appearances between 2011 and 2018</li>
+                <li>Won three Olympic gold medals as a member of the U.S. national team</li>
+                <li>Won the inaugural NBA Cup in 2023 with the Lakers</li>
             </ul>
         </div>
 
