--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -402,38 +402,33 @@
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>LeBron Raymone James Sr.</h1>
-        <p class="description"> I am an American professional basketball player for the Los Angeles Lakers of the National Basketball Association (NBA).</p>
+        <h1>Justin Cabrera</h1>
+        <p class="description">I am Computer Engineering student</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
-            <h3>About me "King James"</h3>
+            <h3>Information</h3>
             <ul>
-                <li>I was born and raised in Akron, Ohio, and gained national attention while playing at St. Vincent–St. Mary High School. </li>
-                <li>People were already talking about me as a future NBA superstar because of my all-around scoring, passing, athleticism, and playmaking abilities.</li>
-                <li>After high school, I went straight to the pros, being selected by the Cleveland Cavaliers with the first overall pick in the 2003 NBA draft.</li>
-                <li>I won Rookie of the Year and quickly made a name for myself as one of the league’s top players.</li>
-                <li>I led Cleveland to its first NBA Finals appearance in 2007 and took home the scoring title in 2008.</li>
-                <li>After winning back-to-back MVPs in 2009 and 2010, I made the decision to leave the Cavaliers and join the Miami Heat as a free agent, </li>
-                <li>which turned into a controversial move that I announced during a nationally televised special called The Decision.</li>
+               <li>Born On July 12, 2002</li>
+                <li>A student of PUP Binan Campus</li>
+                <li>Gender: Male</li>
+                <li>Age: 22</li>
             </ul>
 
-            <h3>Achievements</h3>
+           <h3>Hobbies</h3>
             <ul>
-                <li>NBA's all-time leading scorer</li>
-                <li>Won four NBA championships from 10 NBA Finals appearances</li>
-                <li>Made eight consecutive appearances between 2011 and 2018</li>
-                <li>Won three Olympic gold medals as a member of the U.S. national team</li>
-                <li>Won the inaugural NBA Cup in 2023 with the Lakers</li>
+               <li>Playing Mobile Legends (ign: Jasten)</li>
+                <li>I love Music and my favorite artist is Post Malone</li>
+                <li>A Wanhwa Reader</li>
+                <li>Love Watching Anime</li>
             </ul>
         </div>
 
         <!-- Centered Links -->
         <div class="links">
-            <a href="https://www.linkedin.com/in/john-richard-alix-666481230/"><i class="fab fa-linkedin"></i>LinkedIn</a>
-            <a href="https://github.com/yhnalx"><i class="fab fa-github"></i>GitHub</a>
-            <a href="https://www.facebook.com/yhnalx"><i class="fab fa-facebook"></i>Facebook</a>
+            <a href="https://github.com/jasten-hue"><i class="fab fa-github"></i>GitHub</a>
+            <a href="https://www.facebook.com/cabrera.tintin/"><i class="fab fa-facebook"></i>Facebook</a>
         </div>
 
         <div class="visitor-count">
